--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,14 +6,10 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
-  <body>
+  <body onload="loadPosts()">
     <div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
-      <p>Click <a href="/hello">here</a> to see content created by server code.</p>
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
+      <h1>Anonymous Posting App</h1>
+      <div id="display-posts-container"></div>
     </div>
   </body>
 </html>
