Construct initial MVP

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-  </head>
-  <body>
-    <div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
-      <p>Click <a href="/hello">here</a> to see content created by server code.</p>
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>oohca!</title>
+    <link rel="stylesheet" href="style/style.css">
+    
+</head>
+<body>
+    <div class="mainWrapper">
+        <div class="welcomeWrapper">
+            <h1>Welcome to SPS39Project!</h1>
+        </div>
+        <div class="signButtonWrapper">
+            <button class="signButton" onclick="goToSignUp()">Sign up</button> 
+            <button class="signButton" onclick="goToLogin()">Log in</button>
+        </div>
+
     </div>
-  </body>
+
+    <script src="index.js"></script>
+    
+</body>
 </html>
