--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>oohca!</title>
+    <title>SPS Team39</title>
     <link rel="stylesheet" href="style/style.css">
     
 </head>
 <body>
     <div class="mainWrapper">
         <div class="welcomeWrapper">
-            <h1>Welcome to SPS39Project!</h1>
+            <h1>Welcome to SPS Team39's Project!</h1>
         </div>
         <div class="signButtonWrapper">
             <button class="signButton" onclick="goToSignUp()">Sign up</button> 
