--- a/src/main/webapp/signUp.html
+++ b/src/main/webapp/signUp.html
@@ -13,13 +13,7 @@
             <h1>Sign Up</h1>
         </div>
         <div class="signWrapper">
-
-                    <form class="signInputWrapper" action="/signup" method="POST">
-                        <input type="text" id="username" name="username" placeholder="Username" required>
-                        <input type="email" id="email" name="email" placeholder="Email" required>
-                        <input type="password" id="password" name="password" placeholder="Password" required>
-                        <input value="Sign Up" type="submit" class="signButton" style="margin:0px;width:100%" onclick="goToMainPage()">
-                    </form>
+            <!--TODO: should be replaced by google's API-->
                     
         </div>
         <script>
