--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,44 +6,78 @@
     <meta charset="UTF-8">
     <title>Project</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://unpkg.com/jwt-decode/build/jwt-decode.js"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SPS Team39</title>
+    <link rel="stylesheet" href="style/style.css">
   </head>
   <body>
-    <div id="login">
-        <div id="buttonDiv"></div> 
-        <p id="fullName"></p>
-        <p id="sub"></p>
-        <p id="given_name"></p>
-        <p id="family_name"></p>
-        <p id="email"></p>
-        <p id="verifiedEmail"></p>
-        <img id="picture" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>SPS Team39</title>
-      <link rel="stylesheet" href="style/style.css">
-  
-  </head>
-  <body>
+
       <div class="mainWrapper">
           <div class="welcomeWrapper">
               <h1>Welcome to SPS Team39's Project!</h1>
           </div>
           <div class="signButtonWrapper">
-              <button class="signButton" onclick="goToSignUp()">Login with Google</button> 
-          </div>
-  
+            <div id="login">
+                <div id="buttonDiv"></div> 
+                <p id="fullName"></p>
+                <p id="sub"></p>
+                <p id="given_name"></p>
+                <p id="family_name"></p>
+                <p id="email"></p>
+                <p id="verifiedEmail"></p>
+                <img id="picture" />
+            </div>
+        </div>
       </div>
     </body>
   
-      <script>
-          function goToSignUp() {
-              window.location.href = "/signup";
-          }
-  
-      </script>
-  
   </body>
+  <script>
+      // Copyright 2020 Google LLC
+//
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+//
+//     https://www.apache.org/licenses/LICENSE-2.0
+//
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+
+/**
+  * Adds the sign in with Google function.
+ */
+function handleCredentialResponse(response) {
+    const data = jwt_decode(response.credential)
+    console.log(data)
+
+    fetch('/signup', {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/x-www-form-urlencoded'
+        },
+        body: "ID="+data.sub+"&email="+data.email+"&name="+data.name
+    }).catch(error=>{
+        console.log("Error creating user!");
+    });
+  }
+window.onload = function () {
+    google.accounts.id.initialize({
+        client_id: "ID",
+        callback: handleCredentialResponse
+    });
+    google.accounts.id.renderButton(
+        document.getElementById("buttonDiv"),
+        { theme: "outline", size: "large" }  // customization attributes
+    );
+    google.accounts.id.prompt(); // also display the One Tap dialog
+}
+
+  </script>
   </html> 
