mainPage background update and adjust.

--- a/src/main/webapp/mainPage.html
+++ b/src/main/webapp/mainPage.html
@@ -24,14 +24,18 @@
         <input type="submit" value="Submit" className="submitBtn">
     </form>
     <hr>
-    <p id="unrepliedstyle">Unreplied Post:</p>
-    <button onclick="myFunction()">Expand/Collapse</button>
+    <p id="unrepliedstyle">Unreplied Post:
+        <button onclick="myFunction()" id="unrepliedbtn"> Expand/Collapse +</button>
+    </p>
+
     <div id="unRepliedWrapper">
 
     </div>
     <hr>
-    <p id="repliedstyle">Replied Post:</p>
-    <button onclick="myReplyFunction()">Expand/Collapse</button>
+    <p id="repliedstyle">Replied Post:
+        <button onclick="myReplyFunction()" id="repliedbtn">Expand/Collapse +</button>
+    </p>
+
     <div id="repliedWrapper">
 
     </div>
