This is the last, I promise

--- a/src/main/webapp/mainPage.html
+++ b/src/main/webapp/mainPage.html
@@ -119,14 +119,16 @@
     margin-left: auto;
     font-family: Raleway;
     font-size: 15px;
-    box-shadow: 3px 3px black !important;
+    border-radius: 6px;
     width: 20%;
 }
 
 #copyBtn{
     margin-right: 30px;
     height: 5vh;
-    box-shadow: 3px 3px black;
+    box-shadow: 0 0 10px #ccc;
+    border-radius: 6px;
+    cursor:pointer;
     background-color: white;
     font-family: Raleway;
     font-size: 15px;
