--- a/src/main/webapp/mainPage.html
+++ b/src/main/webapp/mainPage.html
@@ -23,7 +23,7 @@
      margin:30px;
  }
  body {
-    background: url(images/mainbackground.jpg);
+    background: linear-gradient(to bottom, #6e60d0 1%,#5680e9 100%);
     background-size: cover;
   }
   form input {
@@ -44,7 +44,7 @@
   }
   
   form {
-    background: #D9D9D9;
+    background: white;
     border: 1px solid #ccc;
     box-shadow: 0 0 10px #ccc;
     border-radius: 20px;
@@ -123,7 +123,7 @@
     width: 20%;
 }
 
-#copyBtn{
+.copyBtn{
     margin-right: 30px;
     height: 5vh;
     box-shadow: 0 0 10px #ccc;
@@ -143,7 +143,9 @@
     <iframe name="dummyFrame" id="dummyFrame" style="display: none;"></iframe>
     <div id="copyWrapper">
         <input id="urlBox">
-        <button id="copyBtn" onclick="copyUrl()"> Share </button>
+        <button class="copyBtn" onclick="copyUrl()"> Share </button>
+        <button class="copyBtn" onclick="logout()"> Log Out </button>
+
     </div>
     <form action="/new-post" method="post" target="dummyFrame" onsubmit="setTimeout(function(){window.location.reload();},300);">
         Create New Post!
@@ -171,8 +173,14 @@
     </div>
 
 <script>
+    
 
     document.getElementById("urlBox").value = window.location.href;
+
+    function logout(){
+        document.cookie = "token" + "=" + "; expires=Thu, 01-Jan-70 00:00:01 GMT";
+        window.location.href = "https://summer22-sps-39.wl.r.appspot.com/";
+    }
     function copyUrl(){
         var dummy = document.createElement('input'),
         text = window.location.href;
